Mudanças a serem submetidas: 	modified:   src/pages/Admin/AdminRoom/index.tsx 	modified:   src/pages/Admin/AdminRoom/styles.scss

--- a/src/pages/Admin/AdminRoom/styles.scss
+++ b/src/pages/Admin/AdminRoom/styles.scss
@@ -99,6 +99,14 @@ $color-black: #29292e;
         color: $color-gray;
       }
     }
+    
+    ul {
+      margin-bottom: 6rem;
+    }
+
+    li {
+      margin-bottom: 1.2rem;
+    }
   }
  
 }
