Mudanças a serem submetidas: 	new file:   src/assets/Icon-Excluir.svg 	modified:   src/components/AlertDialog/index.tsx 	modified:   src/components/AlertDialog/styles.scss 	modified:   src/pages/Admin/AdminRoom/index.tsx 	modified:   src/pages/Admin/AdminRoom/styles.scss

--- a/src/pages/Admin/AdminRoom/styles.scss
+++ b/src/pages/Admin/AdminRoom/styles.scss
@@ -108,5 +108,24 @@ $color-black: #29292e;
       margin-bottom: 1.2rem;
     }
   }
- 
+
+  .btn-modal {
+    transition: filter 0.3s;
+    &:hover {
+      filter: brightness(80%);
+    }
+  }
+}
+
+.btn-modal {
+  transition: filter 0.3s;
+  &:hover {
+    filter: brightness(90%);
+  }
+}
+
+.img-trash {
+  width: 30%;
+  margin-bottom: 1.6rem;
+  margin-top: 2.6rem;
 }
