Mudanças a serem submetidas: 	modified:   src/hooks/useRoom.ts 	modified:   src/pages/Room.tsx 	modified:   src/styles/room.scss

--- a/src/styles/room.scss
+++ b/src/styles/room.scss
@@ -202,12 +202,8 @@ $color-black: #29292e;
       }
     }
     
-    ul {
+    .question-list {
       margin-bottom: 6rem;
-    }
-
-    li {
-      margin-bottom: 1.2rem;
     }
   }
  
