Mudanças a serem submetidas: 	modified:   src/pages/Admin/AdminRoom/index.tsx 	modified:   src/pages/Admin/AdminRoom/styles.scss 	modified:   src/pages/Room.tsx 	modified:   src/styles/room.scss

--- a/src/styles/room.scss
+++ b/src/styles/room.scss
@@ -202,8 +202,16 @@ $color-black: #29292e;
       }
     }
     
-    .question-list {
+    .questions-list {
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+
       margin-bottom: 6rem;
+
+      .questions-answered {
+        margin-top: 2.5rem;
+      }
     }
   }
  
