--- a/src/pages/Admin/AdminRoom/styles.scss
+++ b/src/pages/Admin/AdminRoom/styles.scss
@@ -130,6 +130,43 @@ $color-black: #29292e;
   margin-top: 2.6rem;
 }
 
-.question-list {
-  margin-bottom: 6.8rem;
+.questions-list {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+
+  margin-bottom: 6rem;
+
+  .questions-answered {
+    margin-top: 2rem;
+    position: relative;
+
+    &:before {
+      content: '';
+      position: absolute;
+      top: -6%;
+      left: 0;
+      width: 100%;
+      height: 1px;
+     
+      background-color: $color-gray-light;
+    }
+  }
+
+  .questions-highlighted {
+    margin-bottom: 2rem;
+    position: relative;
+
+    &:before {
+      content: '';
+      position: absolute;
+      top: 105%;
+      left: 0;
+      width: 100%;
+      height: 1px;
+     
+      background-color: $color-primary;
+      opacity: 20%;
+    }
+  }
 }
