Mudanças a serem submetidas: 	modified:   src/styles/room.scss

--- a/src/styles/room.scss
+++ b/src/styles/room.scss
@@ -210,7 +210,11 @@ $color-black: #29292e;
       margin-bottom: 6rem;
 
       .questions-answered {
-        margin-top: 2.5rem;
+        margin-top: 2rem;
+      }
+    
+      .questions-highlighted {
+        margin-bottom: 2rem;
       }
     }
   }
