--- a/src/styles/room.scss
+++ b/src/styles/room.scss
@@ -14,6 +14,18 @@ $color-black: #29292e;
   header {
     padding: 2.4rem;
     border-bottom: 1px solid $color-gray-light;
+    position: fixed;
+
+    background: rgba( 255, 255, 255, 0.35 );
+    backdrop-filter: blur(13.5px);
+    -webkit-backdrop-filter: blur(13.5px);
+
+    box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.05);
+
+    width: 100%;
+    top: 0;
+ 
+    z-index: 11;
 
     .content {
       max-width: 1120px;
@@ -37,7 +49,8 @@ $color-black: #29292e;
 
   main {
     width: 80rem;
-    margin: 0 auto;
+    margin: 13.2rem auto;
+    
     
     .room-title {
       margin: 32px 0 24px;
