Mudanças a serem submetidas: 	modificado:    src/pages/Admin/AdminRoom/styles.scss 	modificado:    src/styles/auth.scss 	modificado:    src/styles/room.scss 	modificado:    yarn.lock

--- a/src/styles/auth.scss
+++ b/src/styles/auth.scss
@@ -213,6 +213,13 @@ $color-black: #29292e;
       }
     }
   }
+  @media (max-width: 1200px) {
+    aside {
+      display: none;
+    }
+
+    
+  }
     
   }
   
